# tollgate

./: .gitignore  .gitmodules  Architecture.md  Makefile  README.md  pom.xml
asyncapi/: README.md
asyncapi/device/: asyncapi.yaml
asyncapi/device/output-python/: README.md  main.py  messaging.py  payload.py  pole.py  poleGetStatus.py  poleSetStatus.py  poles.py  sentAt.py
billing-service/: pom.xml
billing-service/src/main/resources/: application.properties
cloud2edge/: local_airpurifier.py
cloud2edge/scripts/: command.sh  credentials.sh  policy.sh  thing.sh
components/airpurifier/: gw_airpurifier.py
components/billing-service/: pom.xml
components/control-panel/: tableWidget.py
components/pole-hono/: Pole.py
components/recognizing-service/: pom.xml
components/validating-service/: pom.xml
control-panel/: main.py  mainWindow.py  tab4.py
detecting-service/: pom.xml
detecting-service/src/main/resources/: application.properties
docs/: arch.pu  architecture.graffle  architecture.md  mq.graffle  scenario.pu  state.pu
hono/: airp.py  gw_airpurifier.py  hono.env
mtc/: CMakeLists.txt  main.cpp  mtcpanel.cpp  mtcpanel.h  tolling.scxml
plantuml/: Makefile  digital-twin.puml  dt-brake.puml  mtc-cloud-lanes.puml  mtc-cloud.puml  mtc-coordination.puml  mtc-cpss.puml  mtc-eventdriven.puml  mtc-refactory.puml  mtc-seq.puml  mtc-statemachine.puml  mtc.puml  sprites.puml
pole-hono/: hono.env  main.py
recogniting-service/: pom.xml
recognizing-service/: pom.xml
recognizing-service/src/main/resources/: application.properties
scenario/: pom.xml
tollgate-core/: pom.xml
tollgate-model/: pom.xml
tolling-service/: pom.xml
tolling-service/src/main/resources/: application.properties
validating-service/: pom.xml
vehicle-service/: pom.xml
vehicle-service/src/main/resources/: application.properties  vehicle.xml
(+89 files in other folders)
